--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.general.login">
+    tools:context=".ui.fragment.general.Login">
+
 
 
     <ImageView
@@ -26,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="8dp"
-        android:hint="contraseña"
+        android:hint="Usurario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -37,7 +38,6 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passw"
-            android:inputType="textPassword"
             android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/person_palorosa"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="8dp"
-        android:hint="@string/E_maill"
+        android:hint="Contraseña"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -65,7 +65,8 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/correoelectronico"
+            android:id="@+id/pasword_text"
+            android:inputType="textPassword"
             android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/e_mail_icon"
