--- a/app/src/main/res/navigation/main_nav_graf.xml
+++ b/app/src/main/res/navigation/main_nav_graf.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/login"
-        android:name="com.lizven.ui.general.login"
+        android:name="com.lizven.ui.fragment.general.Login"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
 </navigation>
